# insilicoSV

./: .gitignore  .gitmodules  LICENSE  README.md  __init__.py  arguments.py  complex_bed_to_vcf.py  constants.py  div_repeat_postproc.py  divergent_repeat_augmentation.sh  divergent_repeat_simulation.sh  edit_ref.sh  extraction.py  fix_div_dDUP_vcf.py  generate_synthetic_genome.sh  mypy.ini  par.yaml  par_test.yaml  postprocessing.py  processing.py  pyproject.toml  run_tests.sh  setup.py  simulate.py  structural_variant.py  test.txt  test_out.txt  unit_testing.py  utils.py
debugging/: debug_script
debugging/alignments/: test_sorted.bam.bai
debugging/inputs/: dummy.txt  dummy2.txt  out.bed  out1.bed  out2.bed  scratchwork.txt  test.fna  test.fna.amb  test.fna.ann  test.fna.bwt  test.fna.fai  test.fna.pac  test.fna.sa  test1_out.fna  test1_tmp_out.fna  test2_out.fna  test_out.txt
demo/: demo.ipynb
docs/: automated_pipelines_and_additional_utilities.md  benchmark_genomes.md  demo_notebook.md  example_sv_visualizations.md  example_use_cases.md  input_guidelines.md  inputs.md  output_representation.md  outputs.md  summary_config.md  sv_gallery.md  sv_grammar.md  tr_config.md  use_cases.md  wdl.md
envs/: insilicosv-002-env.reqs.txt
insilicosv/: __init__.py  constants.py  div_repeat_postproc.py  output.py  processing.py  simulate.py  structural_variant.py  sv_defs.py  utils.py  variant_set.py  variant_set_makers.py
install/: insilicosv-002-env.yml  requirements.txt
reference/: out.bed  test.fna  test1_out.fna  test2_out.fna
reference/inputs/: out21.bed  par.yaml
test/: test_known_svs.py  test_processing.py  test_simulate.py  test_sv.py  test_utils.py  test_variant_set_makers.py
test/inputs/: example_INV_dDUP.vcf  example_SNP.vcf  example_TRA.vcf  example_TRA_NONRECIP.vcf  example_TRA_UNBAL.vcf  example_dDUP.vcf  (+36 more)
tests/: test_known_svs.py  test_simulate.py  test_utils.py  test_variant_set_makers.py
unit_tests/: test_known_svs.py  test_processing.py  test_simulate.py  test_sv.py
workflows/: build_igv_batch_script.py  cancer_lineage_workflow.wdl  complement_bed.py  demo.ipynb  generate_lineage_wdl.py  insilicosv-demo-env.reqs.txt  insilicosv-demo-env.yml  insilicosv_basic_workflow.wdl  insilicosv_cancer_genome.ipynb  insilicosv_demo.ipynb  insilicosv_read_mix.wdl  insilicosv_tree_level_workflow.wdl  insilicosv_workflow.wdl  plot_sim_stats.py  run_insilicosv.wdl  samplot_caller.py
(+68 files in other folders)
