[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insilicosv"
version = "0.1.8"
authors = [
  { name="Nick Jiang", email="nickj@berkeley.edu" },
  { name="Chris Rohlicek", email="crohlice@broadinstitute.org" },
  { name="Enzo Battistella", email="ebattist@broadinstitute.org" },
  { name="Ilya Shlyakhter", email="ilya@broadinstitute.org" },
  { name="Victoria Popic", email="vpopic@broadinstitute.org" },
]
description = "Grammar-based framework for structural variant simultation and placement"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
        'intervaltree',
        'matplotlib',
        'numpy',
        'pyparsing',
        'pysam',
        'PyYAML',
        'sortedcontainers',
        'typing_extensions'
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/PopicLab/insilicoSV"
Issues = "https://github.com/PopicLab/insilicoSV/issues"

[tool.setuptools]
packages = ["insilicosv"]

[project.scripts]
insilicosv = "insilicosv.simulate:run_simulator"
